# python-flask-assignment

./: Dockerfile  README.md  logging_config.py  pyproject.toml
api/: __init__.py  db.py
api/auth/: views.py
api/candidate/: utils.py  views.py
api/config/: config.py
api/models/: candidate_models.py  user_models.py
